# rtic-perd-task-template

./: Cargo.toml  README.md  memory.x  openocd.gdb
src/: main.rs  periph.rs  sys.rs  tasks_def.rs
