[package]
authors = ["wheelin <greg.emry@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "perd-tasks"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.2"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"
cortex-m-rtic = "0.5.3"

[dependencies.stm32f1]
features = ["stm32f103", "rt"]
version = "0.11.0"

[[bin]]
name = "perd-tasks"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
